--- a/app/views/uk/public_signups/_registration_form.html.haml
+++ b/app/views/uk/public_signups/_registration_form.html.haml
@@ -15,7 +15,7 @@
 = r.input :work_phone,  :input_html => {:size => 20}
 
 .instructions= _('public_signup.form.workshop_information')
-= r.input :special_diet, options_for_special_diet(r)
+= r.input :special_diet
 = r.input :lift, options_for_lift(r)
 
 .instructions= _('public_signup.form.note')
