--- a/app/views/office/registrations/_fields_requests.html.haml
+++ b/app/views/office/registrations/_fields_requests.html.haml
@@ -1,5 +1,5 @@
 = form.input :lift, options_for_lift(form)
-= form.input :special_diet, options_for_special_diet(form)
+= form.input :special_diet
 - if Site.de?
   = form.input :backjack_rental, options_for_backjack_rental(form, :translate => false)
   = form.input :sunday_choice, options_for_sunday_choice(form, :translate => false)
