--- a/app/views/office/memberships/_registrations.html.haml
+++ b/app/views/office/memberships/_registrations.html.haml
@@ -3,12 +3,12 @@
     %tr
       %th Title
       %th Level
-      %th.center Approved
+      %th.center Status
       %th.center Completed
   %tbody
     - registrations.each do |r|
       %tr
         %td= link_to_show(office_event_registration_path(r.event, r), r.event_name)
         %td= r.level
-        %td.center= color_dot(r.approved)
+        %td.center= r.status
         %td.center= color_dot(r.completed)
