test using morris.js

--- a/app/views/office/dashboards/index.html.haml
+++ b/app/views/office/dashboards/index.html.haml
@@ -1,5 +1,4 @@
-%div(ng-app='app' ng-controller="Hello" )
-  %h1 Angular count {{ count }}
+= render 'experiments'
 
 - if @pending.count > 0
   .block
