--- a/app/assets/stylesheets/office/application.css.scss
+++ b/app/assets/stylesheets/office/application.css.scss
@@ -16,6 +16,7 @@ $navbarLinkColor:                 $deLight !default;
 @import 'bootstrap-responsive';
 @import 'gmaps4rails';
 @import 'tablesorter';
+@import 'morris.js/morris';
 
 body {
   background-color: #eee;
