--- a/app/views/office/event_reports/_bank.html.haml
+++ b/app/views/office/event_reports/_bank.html.haml
@@ -1,6 +1,6 @@
 %table.table.table-striped
   %caption
-    %h4= title
+    %h4= pluralize(registrations.size, "#{status} #{role} Registration")
   %thead
     %tr
       %th.name Name
@@ -10,13 +10,12 @@
       %th Acc. Name
       %th IBAN
       %th BIC
-      %th
   %tbody
     - registrations.by_first_name.each do |r|
       %tr
         %td.name= link_to_show(office_event_registration_path(r.event, r), r.full_name)
         %td= r.registration_code
-        %td.qty= local_currency r.cost
+        %td= local_currency r.cost
         %td= r.payment_method
         %td= [r.bank_account_name, r.bank_name].compact.join(' / ')
         %td= r.iban
