--- a/app/views/office/event_reports/_secondary_navigation.html.haml
+++ b/app/views/office/event_reports/_secondary_navigation.html.haml
@@ -4,7 +4,7 @@
     %li= link_to(icon('icon-list-alt') + "Overview", office_event_registrations_path(@event))
     %li.nav-header Reports
     %li= link_to(icon('icon-map-marker') + "Show on Map", office_event_map_index_path(@event))
-    %li= link_to(icon('icon-list-alt') + "Details", details_office_event_registrations_path(@event))
+    %li= link_to(icon('icon-list-alt') + "Client History", client_history_office_event_report_path(@event))
     %li= link_to(icon('icon-list-alt') + "Payment Summary", payments_office_event_registrations_path(@event))
     %li= link_to(icon('icon-list-alt') + "Bank", bank_office_event_report_path(@event))
     %li= link_to(icon('icon-list-alt') + "Site", site_office_event_report_path(@event))
