event reports: status

--- a/app/views/office/event_reports/_status.html.haml
+++ b/app/views/office/event_reports/_status.html.haml
@@ -1,17 +1,20 @@
 %table.table.table-striped
   %caption
-    %h4= title
+    %h4= pluralize(registrations.size, "#{status} #{role} Registration")
   %thead
     %tr
       %th.name Name
-      %th.center Gender
+      %th Gender
+      %th.center Cloth. Talk
+      %th.center Reg Fee Rec
       %th.center= "Checked&nbsp;In".html_safe
       %th.center Completed
-
   %tbody
     - registrations.by_first_name.each do |r|
       %tr
         %td.name= link_to_show(office_event_registration_path(r.event, r), r.full_name)
         %td.center= r.gender.first
+        %td.center= color_dot(r.clothing_conversation)
+        %td.center= color_dot(r.reg_fee_received)
         %td.center= color_dot(r.checked_in?)
         %td.center= color_dot(r.completed?)
