--- a/app/views/office/event_reports/_checklist.html.haml
+++ b/app/views/office/event_reports/_checklist.html.haml
@@ -1,6 +1,6 @@
 %table.table.table-striped
   %caption
-    %h4= title
+    %h4= pluralize(registrations.size, "#{status} #{role} Registration")
   %thead
     %tr.person
       %th.checkin Da?
