event report: roster

--- a/app/views/office/event_reports/_roster.html.haml
+++ b/app/views/office/event_reports/_roster.html.haml
@@ -1,7 +1,7 @@
 %tr
   %td{ :colspan => 3}= role
 
-- regs.by_first_name.each do |r|
+- registrations.by_first_name.each do |r|
   %tr
     %td
       #{r.full_name}
