event report: payment

--- a/app/views/office/event_reports/_payment.html.haml
+++ b/app/views/office/event_reports/_payment.html.haml
@@ -2,7 +2,7 @@
   .span6
     %table.table
       %caption
-        %h4= title
+        %h4= pluralize(registrations.size, "#{status} #{role} Registration")
       %thead
         %tr
           %th.name Name
