--- a/app/views/office/event_reports/_reports.html.haml
+++ b/app/views/office/event_reports/_reports.html.haml
@@ -3,7 +3,7 @@
 %li.nav-header Reports
 %li= link_to(icon('icon-map-marker') + "Show on Map", office_event_map_index_path(@event))
 %li= link_to(icon('icon-list-alt') + "Client History", client_history_office_event_report_path(@event))
-%li= link_to(icon('icon-list-alt') + "Payment Summary", payments_office_event_registrations_path(@event))
+%li= link_to(icon('icon-list-alt') + "Payment", payment_office_event_report_path(@event))
 %li= link_to(icon('icon-list-alt') + "Bank", bank_office_event_report_path(@event))
 %li= link_to(icon('icon-list-alt') + "Site", site_office_event_report_path(@event))
 %li= link_to(icon('icon-list-alt') + "Checklist", checklist_office_event_report_path(@event))
