--- a/app/views/office/event_reports/roster.html.haml
+++ b/app/views/office/event_reports/roster.html.haml
@@ -8,17 +8,4 @@
     %p
       Click PDF Format to generate a printable version. Only angels marked as completed will appear on this roster.
 
-    - registrations = @roster.registrations
-    %table.table.table-bordered
-      %thead
-        %tr.person
-          %th Name & Email
-          %th= t('enums.registration.roster.address')
-          %th= t('enums.registration.roster.phones')
-      %tbody
-        - if registrations.participants.size > 0
-          = render 'roster', role: t('enums.registration.roster.participant'), registrations: registrations.participants
-        - if registrations.team.size > 0
-          = render 'roster', role: t('enums.registration.roster.team'), registrations: registrations.team
-        - if registrations.facilitators.size > 0
-          = render 'roster', role: t('enums.registration.roster.facilitator'), registrations: registrations.facilitators
+    = render 'roster', registrations: @roster.registrations
