--- a/app/views/office/registrations/_registration.html.haml
+++ b/app/views/office/registrations/_registration.html.haml
@@ -1,3 +1,4 @@
 = render 'office/registrations/contact', :registration => registration
 = render 'office/registrations/request', :registration => registration
 = render 'office/registrations/payment', :registration => registration
+= render 'office/registrations/staff', :registration => registration
