--- a/app/views/office/event_reports/bank.html.haml
+++ b/app/views/office/event_reports/bank.html.haml
@@ -1,4 +1,7 @@
 .block
   .content
+    = controls do |c|
+      - add_button_to(c, :csv)
+
     %h2 #{@event.display_name} Bank Report
     = render 'grouped', report: 'bank'
