--- a/app/views/office/event_reports/roster.html.haml
+++ b/app/views/office/event_reports/roster.html.haml
@@ -1,6 +1,7 @@
 .block
   .content
     = controls do |c|
+      - add_button_to(c, :csv)
       - add_button_to(c, "PDF Format", :format => :pdf)
 
     %h2 #{@roster.title}
