--- a/app/views/office/registrations/_fields_highest_level.html.haml
+++ b/app/views/office/registrations/_fields_highest_level.html.haml
@@ -1,3 +1,3 @@
-= form.input :highest_level, label: _('public_signup.form.previous_workshop.highest_level'), input_html: {:size => 5}
-= form.input :highest_location, label: _('public_signup.form.previous_workshop.highest_location'),  input_html: {:size => 30}
-= form.input :highest_date, label: _('public_signup.form.previous_workshop.highest_date'), input_html: {:size => 20}
+= form.input :highest_level, label: SiteDefault.get('public_signup.form.previous_workshop.highest_level'), input_html: {:size => 5}
+= form.input :highest_location, label: SiteDefault.get('public_signup.form.previous_workshop.highest_location'),  input_html: {:size => 30}
+= form.input :highest_date, label: SiteDefault.get('public_signup.form.previous_workshop.highest_date'), input_html: {:size => 20}
