dont use back_url & stored_location

--- a/app/views/office/payments/_secondary_navigation.html.haml
+++ b/app/views/office/payments/_secondary_navigation.html.haml
@@ -8,4 +8,4 @@
     %li.nav-header Reports
     %li= link_to(icon('icon-list-alt') + "Event Payments", payment_office_event_report_path(registration.event))
     %li.nav-header Actions
-    %li= link_to(icon('icon-edit') + "Edit Registration", edit_office_event_registration_path(registration.event, registration, back_url: url_for))
+    %li= link_to(icon('icon-edit') + "Edit Registration", edit_office_event_registration_path(registration.event, registration))
