--- a/app/views/office/public_signups/show.html.haml
+++ b/app/views/office/public_signups/show.html.haml
@@ -3,7 +3,7 @@
     - r = public_signup.registration
     - if r.approved?
       = controls do |c|
-        - add_button_to(c, 'Show event registrations', :event_id => r.event, :controller => :registrations)
+        - add_button_to(c, 'Show event registrations', event_id: r.event, controller: :event_reports, action: :status)
         - add_button_to(c, :waitlist, :action => :waitlist, :icon => 'time', :method => :put)
 
     - else
