--- a/app/views/office/angels/show.html.haml
+++ b/app/views/office/angels/show.html.haml
@@ -1,8 +1,7 @@
 .block
   .content
     = controls do |c|
-      - add_button_to(c, :edit)
-      - add_button_to(c, :delete)
+      - c << edit_button
 
     %h2 Details for #{angel.display_name}
 
@@ -11,7 +10,7 @@
 
   .content
     = controls do |c|
-      - add_button_to(c, 'Add membership', :angel_id => angel, :controller => :memberships)
+      - c << new_button(label: 'New Membership', path: new_office_angel_membership_path(angel))
 
     - if angel.memberships.size > 0
       %h3 #{pluralize(angel.memberships.size, 'Membership')}
@@ -21,7 +20,7 @@
 
   .content
     = controls do |c|
-      - add_button_to(c, 'Add registration', :angel_id => angel, :controller => :angel_registrations)
+      - c << new_button(label: 'New Registration', path: new_office_angel_registration_path(angel))
 
     - if registrations.size > 0
       %h3 Registered for #{pluralize(registrations.size, 'event')}
