--- a/app/views/office/dashboards/index.html.haml
+++ b/app/views/office/dashboards/index.html.haml
@@ -2,7 +2,7 @@
   .block
     .content
       = controls do |c|
-        - add_button_to(c, 'Show pending signups', :controller => :public_signups, :action => :index)
+        - c << show_button(label: 'Show Pending Signups', path: office_public_signups_path)
 
       %h3
         #{pluralize(@pending.count, "public signup")} pending approval.
@@ -11,7 +11,7 @@
   .block
     .content
       = controls do |c|
-        - add_button_to(c, 'Show waitlisted signups', :controller => :public_signups, :action => :waitlisted)
+        - c << show_button(label: 'Show Wait Listed Signups', path: waitlisted_office_public_signups_path)
 
       %h3
         #{pluralize(@waitlisted.count, "public signup")} wait listed.
@@ -20,7 +20,7 @@
   .block
     .content
       = controls do |c|
-        - add_button_to(c, 'Show registrations', controller: :event_reports, action: :status, event_id: event)
+        - c << registrations_button(event)
 
       %h2 
         #{event.display_name} ~ #{time_ago_in_words(event.start_date)}
