--- a/app/views/office/event_reports/payment.html.haml
+++ b/app/views/office/event_reports/payment.html.haml
@@ -1,7 +1,7 @@
 .block
   .content
     = controls do |c|
-      - add_button_to(c, :csv)
+      - c << csv_button
 
     %h2 #{@event.display_name} Payment Report
     = render 'grouped', report: 'payment'
