--- a/app/views/office/event_reports/status.html.haml
+++ b/app/views/office/event_reports/status.html.haml
@@ -1,8 +1,8 @@
 .block
   .content
     = controls do |c|
-      - add_button_to(c, :csv)
-      - add_button_to(c, :vcard)
+      - c << csv_button
+      - c << vcard_button
 
     %h2 #{@event.display_name} Status Report
     = render 'counts', registrations: @event.registrations.approved
