--- a/app/views/office/events/show.html.haml
+++ b/app/views/office/events/show.html.haml
@@ -1,9 +1,8 @@
 .block
   .content
     = controls do |c|
-      - c << link_to(icon('icon-user') + "Registrations", status_office_event_report_path(event), class: 'btn')
-      - add_button_to(c, :edit)
-      - add_button_to(c, :delete)
+      - c << registrations_button(event)
+      - c << edit_button
 
     %h2 #{event.display_name}
 
