--- a/app/views/office/payments/show.html.haml
+++ b/app/views/office/payments/show.html.haml
@@ -1,8 +1,7 @@
 .block
   .content
     = controls do |c|
-      - add_button_to(c, :edit)
-      - add_button_to(c, :delete)
+      - c << edit_button
 
   .content
     = render 'payment', payment: @payment
