--- a/app/views/office/teams/show.html.haml
+++ b/app/views/office/teams/show.html.haml
@@ -1,11 +1,8 @@
 .block
   .content
     = controls do |c|
-      - add_button_to(c, 'Assign', method: :post, id: @team.id, controller: 'team_assignments', action: :create)
-      - add_button(c, 'Assign', assign_office_team_path(@team), method: :post)
-      - add_button_to(c, :edit)
-      - add_button(c, :edit)
-      - add_button_to(c, 'Refresh', method: :post, team_id: @team, controller: 'members', action: 'refresh')
-      - add_button(c, :refresh, refresh_office_team_members_path(@team), method: :post)
+      - c << new_button(label: 'Assign', path: assign_office_team_path(@team), html: {method: :post})
+      - c << edit_button
+      - c << button_with_options(:refresh, path: refresh_office_team_members_path(@team), html: {method: :post})
 
     = render @team
