--- a/app/views/office/dashboards/_experiments.html.haml
+++ b/app/views/office/dashboards/_experiments.html.haml
@@ -1,12 +1,6 @@
 %div(ng-app='app')
 
-  %div(ng-controller="Hello" )
+  %div(ng-controller="HelloCtl" )
     %h1 Angular count {{ count }}
 
     %div(hello)
-
-    .col-md-4
-      %section.panel.panel-default
-        .panel-heading Team
-        .panel-body
-          %div(morris-chart data="donutData" type="donut" xkey="year" colors='["#23AE89","#2EC1CC","#FFB61C","#E94B3B"]')
