--- a/app/views/layouts/de_site.html.haml
+++ b/app/views/layouts/de_site.html.haml
@@ -11,9 +11,8 @@
     %link{:href => '//fonts.googleapis.com/css?family=Open+Sans', rel: 'stylesheet', type: 'text/css'}
     :javascript
       window["_GOOG_TRANS_EXT_VER"] = "1"
-    = stylesheet_link_tag 'public_signup/de/main'
-    %script{src:"//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
-    = javascript_include_tag "public_signup"
+    = stylesheet_link_tag 'de'
+    = javascript_include_tag 'public_signup'
     = csrf_meta_tag
   %body
     #flash{ :'padding-left' => '60px' }
