--- a/app/views/layouts/uk_site.html.haml
+++ b/app/views/layouts/uk_site.html.haml
@@ -8,9 +8,8 @@
     %meta{:content => "HAI UK, love, intimacy, sexuality, workshops, hugging, hugs, closeness, community, togetherness", :name => "keywords"}
     %meta{:content => "The Human Awareness Institute (HAI) empowers individuals to be potent, loving, contributing human beings. HAI promotes personal growth and social evolution by replacing ignorance and fear with awareness and love.", :name => "description"}
     %link{href: "/favicon-uk.ico", rel: "shortcut icon"}
-    = stylesheet_link_tag 'public_signup/uk/main'
-    %script{src:"//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
-    = javascript_include_tag "public_signup"
+    = stylesheet_link_tag 'uk'
+    = javascript_include_tag 'public_signup'
     = csrf_meta_tag
   %body
     #main
