--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -4,9 +4,8 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
     %title= @title || "HAI #{Site.name.upcase} Workshops"
     %link{:href => "/favicon-#{Site.name}.ico", :rel => "shortcut icon"}/
-    = stylesheet_link_tag "office/application"
-    %script{src:"//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
-    = javascript_include_tag 'office/application'
+    = stylesheet_link_tag 'application'
+    = javascript_include_tag 'application'
     = csrf_meta_tag
     = yield :head
   %body{class: page_class}
