--- a/app/views/layouts/office.html.haml
+++ b/app/views/layouts/office.html.haml
@@ -4,28 +4,9 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
     %title= @title || "HAI #{Site.name.upcase} System"
     %link{:href => "/favicon-#{Site.name}.ico", :rel => "shortcut icon"}/
-    = stylesheet_link_tag "office/application"
-    %script{src:"//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
-    %script{src:"//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"}
-    = javascript_include_tag 'office/application'
+    = stylesheet_link_tag 'application'
+    = javascript_include_tag 'application'
     = csrf_meta_tag
-    - if Site.uk?
-      :css
-        #header {
-          background-image: url('/images/uk/logo-big.png');
-          background-repeat: no-repeat;
-          background-position: 0 0;
-          -webkit-background-size: 100% 100%;
-          -moz-background-size: 100% 100%;
-          -o-background-size: 100% 100%;
-          background-size: 100% 100%;
-        }
-        #header, .secondary-navigation {
-          background-color: #d6af2e;
-        }
-        #main-navigation ul li, .secondary-navigation ul li {
-          background: #e7cf84;
-        }
     = yield :head
   %body
     .navbar
